# evo-1

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  index.html  package.json  run_scenarios.sh  run_simulation.sh  sentry-config.js  sentry.js  server.py
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: README.md  api-reference.md  deployment.md  implementation.md  maintenance.md  vision.md
docs/diagrams/: README.md  frame-pipeline.dot  runtime-model.dot  system-overview.dot
public/: _headers
scripts/: build-pages.sh  build-wasm.sh  check-diagrams.mjs  check.sh  render-diagrams.mjs  write-sentry-config.mjs
src/: agent.rs  ecs.rs  genes.rs  headless.rs  lib.rs  renderer.rs  resource.rs  simulation.rs
src/ecs/: components.rs  spatial.rs
