[package]
name = "battleo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
rayon = "1.10"
getrandom = { version = "0.2", features = ["js"] }
hecs = "0.10"
rand_distr = "0.4"
serde-wasm-bindgen = "0.6"
num_cpus = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "console",
    "Window",
    "Document",
    "Navigator",
    "WebGlRenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlUniformLocation",
] }
console_error_panic_hook = "0.1"
js-sys = "0.3"

[package.metadata.wasm-pack.profile.release.target.'cfg(target_arch = "wasm32")']
rustflags = ["-C", "target-feature=+atomics,+bulk-memory"]

[package.metadata.wasm-pack.profile.dev.target.'cfg(target_arch = "wasm32")']
rustflags = ["-C", "target-feature=+atomics,+bulk-memory"]
