[package]
name = "battleo"
version = "0.1.0"
edition = "2021"
description = "Evolutionary agent simulation with native headless and WebAssembly browser modes"
repository = "https://github.com/rgilks/battleo"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
rayon = "1.10"
getrandom = { version = "0.2", features = ["js"] }
hecs = "0.10"
rand_distr = "0.4"
serde-wasm-bindgen = "0.6"
num_cpus = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "console",
    "Window",
    "Document",
    "Navigator",
    "WebGlRenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlUniformLocation",
] }
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen-rayon = { version = "1.3", optional = true }

[features]
wasm-bindgen-rayon = ["dep:wasm-bindgen-rayon"]
