[package]
name = "battleo"
version = "0.1.0"
edition = "2021"
description = "Evolutionary agent simulation with native headless and WebAssembly browser modes"
repository = "https://github.com/rgilks/battleo"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
rayon = "1.10"
hecs = "0.10"
rand_distr = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.0", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "console",
    "Window",
    "Document",
    "Navigator",
    "WebGlRenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlUniformLocation",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
wasm-bindgen-rayon = { version = "1.3", optional = true, features = ["no-bundler"] }

[features]
wasm-bindgen-rayon = ["dep:wasm-bindgen-rayon"]
